I try to add firebase login screen

--- a/damtrade/ios/Runner/Info.plist
+++ b/damtrade/ios/Runner/Info.plist
@@ -45,5 +45,18 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+<array>
+	<dict>
+		<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>com.googleusercontent.apps.304831392698-lt64sh735t64vmnpvmre3n46tgcd9k18</string>
+		</array>
+	</dict>
+</array>
+
+
 </dict>
 </plist>
