--- a/damtrade/android/app/src/main/AndroidManifest.xml
+++ b/damtrade/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.googlesignin">
-    <uses-permission android:name="android.permission.INTERNET"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="damtrade"
         android:name="${applicationName}"
