--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.19.5
   firebase_ui_auth: ^1.14.0
   firebase_ui_oauth_google: ^1.3.2
+  cloud_firestore: ^4.17.4
 
 dev_dependencies:
   flutter_test:
