--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.1
+  provider: ^6.1.2
+  json_annotation: ^4.9.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
