--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   html: ^0.15.4
   flutter_swipe_button: ^2.1.3
   intl: ^0.19.0
+  flutter_ringtone_player: ^4.0.0+3
+  flutter_local_notifications: ^14.0.0
 
 
 
