--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   intl: ^0.19.0
   flutter_ringtone_player: ^4.0.0+3
   flutter_local_notifications: ^14.0.0
-
+  permission_handler: ^11.3.1
 
 
 
