--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -40,9 +40,8 @@ dependencies:
   flutter_local_notifications: ^14.0.0
   permission_handler: ^11.3.1
   beautiful_soup_dart: ^0.3.0
-
-
-
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
