--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_ui_auth: ^1.14.0
   firebase_ui_oauth_google: ^1.3.2
   cloud_firestore: ^4.17.4
+  web_socket_channel: ^3.0.0
 
 dev_dependencies:
   flutter_test:
