--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -51,8 +51,11 @@ dependencies:
   firebase_ui_oauth_google: ^1.3.2
   cloud_firestore: ^4.17.4
   web_socket_channel: ^3.0.0
+  protobuf: ^3.1.0
+  uuid: ^4.4.0
 
 dev_dependencies:
+  protoc_plugin: ^21.1.2
   flutter_test:
     sdk: flutter
 
