--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -79,7 +79,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/sushanta.jpeg
+    - assets/BullAndBear.jpg
     - assets/NSE.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
