--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
   protoc_plugin: ^21.1.2
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,6 +67,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/DamTrade-logo2.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -81,6 +86,7 @@ flutter:
   assets:
     - assets/BullAndBear.jpg
     - assets/NSE.json
+    - assets/DamTrade-logo2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
