--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
     - assets/BullAndBear.jpg
     - assets/NSE.json
     - assets/DamTrade-logo2.png
+    - assets/DamTrade-logo-banar.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
