--- a/damtrade/pubspec.yaml
+++ b/damtrade/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   web_socket_channel: ^3.0.0
   protobuf: ^3.1.0
   uuid: ^4.4.0
+  firebase_storage: ^11.7.7
 
 dev_dependencies:
   protoc_plugin: ^21.1.2
